--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy to Render
+name: Build & Deploy to Render
 
 on:
   push:
@@ -6,9 +6,63 @@ on:
       - main
 
 jobs:
+  test:
+    name: Run Tests
+    runs-on: ubuntu-latest
+    services:
+      postgres:
+        image: postgres:16
+        env:
+          POSTGRES_USER: testuser
+          POSTGRES_PASSWORD: testpassword
+          POSTGRES_DB: testdb
+        ports:
+          - 5432:5432
+        options: >-
+          --health-cmd "pg_isready -U testuser -d testdb"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v4
+
+      - name: Set up JDK 21
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'corretto'
+          java-version: '21'
+
+      - name: Cache Maven dependencies
+        uses: actions/cache@v3
+        with:
+          path: ~/.m2
+          key: maven-${{ runner.os }}-${{ hashFiles('**/pom.xml') }}
+          restore-keys: |
+            maven-${{ runner.os }}-
+
+      - name: Wait for PostgreSQL to be ready
+        run: |
+          echo "Waiting for PostgreSQL..."
+          for i in {1..10}; do
+            nc -z localhost 5432 && echo "PostgreSQL is up!" && exit 0
+            sleep 3
+          done
+          echo "PostgreSQL did not start in time" && exit 1
+
+      - name: Run Tests with PostgreSQL
+        env:
+          SPRING_DATASOURCE_URL: jdbc:postgresql://localhost:5432/testdb
+          SPRING_DATASOURCE_USERNAME: testuser
+          SPRING_DATASOURCE_PASSWORD: testpassword
+          SPRING_DATASOURCE_DRIVER_CLASS_NAME: org.postgresql.Driver
+        run: mvn test
+
   deploy:
     name: Build & Deploy to Render
     runs-on: ubuntu-latest
+    needs: test
 
     steps:
       - name: Checkout Repository
@@ -21,9 +75,7 @@ jobs:
           java-version: '21'
 
       - name: Build JAR file
-        run: |
-          mvn clean package -DskipTests
-          ls -lh target/
+        run: mvn clean package -DskipTests
 
       - name: Deploy to Render
         run: |
