--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -51,7 +51,15 @@ jobs:
           done
           echo "PostgreSQL did not start in time" && exit 1
 
-      - name: Run Tests with PostgreSQL
+      - name: Run Flyway Migrations
+        env:
+          SPRING_DATASOURCE_URL: jdbc:postgresql://localhost:5432/testdb
+          SPRING_DATASOURCE_USERNAME: testuser
+          SPRING_DATASOURCE_PASSWORD: testpassword
+          SPRING_DATASOURCE_DRIVER_CLASS_NAME: org.postgresql.Driver
+        run: mvn flyway:migrate
+
+      - name: Run Tests
         env:
           SPRING_DATASOURCE_URL: jdbc:postgresql://localhost:5432/testdb
           SPRING_DATASOURCE_USERNAME: testuser
