Add keycloak and use auth code grant with pkce

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,10 @@ spring.jpa.hibernate.ddl-auto=none
 
 spring.flyway.enabled=true
 spring.flyway.locations=classpath:db/migration
+
+spring.security.oauth2.client.registration.keycloak.client-id=roamly-ui
+spring.security.oauth2.client.registration.keycloak.authorization-grant-type=authorization_code
+spring.security.oauth2.client.registration.keycloak.scope=openid
+spring.security.oauth2.client.registration.keycloak.client-authentication-method=none
+
+spring.security.oauth2.client.provider.keycloak.issuer-uri=http://localhost:8081/realms/roamly
