--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,14 @@
+# Database Configuration
 spring.datasource.url=jdbc:postgresql://localhost:5432/roamly_db
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 
+# Hibernate & Flyway
 spring.jpa.hibernate.ddl-auto=none
-
 spring.flyway.enabled=true
 spring.flyway.locations=classpath:db/migration
 
-spring.security.oauth2.client.registration.keycloak.client-id=roamly-ui
-spring.security.oauth2.client.registration.keycloak.authorization-grant-type=authorization_code
-spring.security.oauth2.client.registration.keycloak.scope=openid
-spring.security.oauth2.client.registration.keycloak.client-authentication-method=none
-
-spring.security.oauth2.client.provider.keycloak.issuer-uri=http://localhost:8081/realms/roamly
+# OAuth2 Client Configuration (Keycloak)
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8081/realms/roamly
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:8081/realms/roamly/protocol/openid-connect/certs
