Add ability to create users though keycloak

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,9 @@ spring.flyway.locations=classpath:db/migration
 # OAuth2 Client Configuration (Keycloak)
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8081/realms/roamly
 spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:8081/realms/roamly/protocol/openid-connect/certs
+
+# Keycloak Admin API Configuration
+keycloak.admin.server-url=http://localhost:8081
+keycloak.admin.realm=roamly
+keycloak.admin.client-id=roamly-backend-admin
+keycloak.admin.client-secret=mmClg4JBDKeBeCg1j7ZNDwkBMnOcZEdx
