--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,6 +1,7 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/testdb
-spring.datasource.username=testuser
-spring.datasource.password=testpassword
+# Database Configuration
+spring.datasource.url=jdbc:postgresql://localhost:5432/roamly_db
+spring.datasource.username=postgres
+spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.hibernate.ddl-auto=none
